--- a/main.html
+++ b/main.html
@@ -21,13 +21,27 @@
     <!-- our own navbar goes here -->
     <site-navbar></site-navbar>
     <!-- Main content goes here -->
-
+    <div class="container-fluid bg-light text-dark p-5">
+      <div class="container bg-light p-5">
+        <h1 class="display-4">
+          Good morning <span id="name-goes-here">friend </span>
+        </h1>
+        <hr />
+        <p>Hey there, welcome! We're so glad you're here.</p>
+      </div>
+    </div>
     <!-- our own footer goes here -->
     <site-footer></site-footer>
     <!---------------------------------------------->
     <!-- Your own JavaScript scripts go here      -->
+    <!-- Firebase and authentication related scripts -->
+    <!-- The order of loading matters -->
+    <script type="module" src="/src/firebaseConfig.js"></script>
+    <script type="module" src="/src/authentication.js"></script>
+    <script type="module" src="/src/loginSignup.js"></script>
     <!---------------------------------------------->
 
     <script type="module" src="/src/app.js"></script>
+    <script type="module" src="/src/main.js"></script>
   </body>
 </html>
