--- a/main.html
+++ b/main.html
@@ -8,6 +8,14 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+    <!-- Google Icons (Material Design)-->
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+
+    <link rel="stylesheet" href="src/styles/style.css" />
+
     <!-- Web Components for shared navbar and footer layout -->
     <script type="module" src="/src/components/site-navbar.js"></script>
     <script type="module" src="/src/components/site-footer.js"></script>
@@ -24,21 +32,36 @@
     <div class="container-fluid bg-light text-dark p-5">
       <div class="container bg-light p-5">
         <h1 class="display-4">
-          Good morning <span id="name-goes-here">friend </span>
+          Welcome! <span id="name-goes-here">friend </span>
         </h1>
         <hr />
-        <p>Hey there, welcome! We're so glad you're here.</p>
+        <p>Quote of the day: <span id="quote-goes-here"></span></p>
       </div>
     </div>
+
+    <div class="container-fluid bg-light text-dark p-5">
+      <h1>Popular Hikes</h1>
+      <div id="hikes-go-here" class="row"></div>
+    </div>
+
+    <template id="hikeCardTemplate">
+      <div class="col">
+        <div class="card">
+          <img class="card-img-top card-image" src="..." alt="Hike Image" />
+          <div class="card-body">
+            <h5 class="card-title"></h5>
+            <p class="card-text"></p>
+            <p>Length: <span class="card-length"></span> km</p>
+            <a class="btn btn-primary read-more" href="#">Read More</a>
+            <i class="material-icons">bookmark_border</i>
+          </div>
+        </div>
+      </div>
+    </template>
     <!-- our own footer goes here -->
     <site-footer></site-footer>
     <!---------------------------------------------->
     <!-- Your own JavaScript scripts go here      -->
-    <!-- Firebase and authentication related scripts -->
-    <!-- The order of loading matters -->
-    <script type="module" src="/src/firebaseConfig.js"></script>
-    <script type="module" src="/src/authentication.js"></script>
-    <script type="module" src="/src/loginSignup.js"></script>
     <!---------------------------------------------->
 
     <script type="module" src="/src/app.js"></script>
